--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,7 @@
 version: '3'
 services:
   PostgreSQL:
+
     image: postgres
     restart: always
     container_name: PostgreSQL
@@ -19,6 +20,9 @@ services:
     ports:
       - "8080:8080"
     tty: true
+    stdin_open: true
+    depends_on:
+      - PostgreSQL
 
 #    volumes:
 #      - ./data:/var/lib/postgresql/data
