--- a/src/main/resources/application.properties.example
+++ b/src/main/resources/application.properties.example
@@ -1,3 +1,4 @@
-URL=
-USERNAME=
-PASSWORD=
+db.url=jdbc:dbc:postgresql://localhost:****/nameDB
+db.username=
+db.password=
+lb.patch=db/changelog/changelog.xml
