--- a/src/main/resources/application.properties.example
+++ b/src/main/resources/application.properties.example
@@ -2,3 +2,7 @@ db.url=jdbc:dbc:postgresql://localhost:****/nameDB
 db.username=
 db.password=
 lb.patch=db/changelog/changelog.xml
+
+??? ?? ? ???? docker - compose ????????? ????
+      POSTGRES_USER:
+      POSTGRES_PASSWORD:
